8207032: Compilation succeeds without checking readability when --add-exports used
Ensuring --add-exports are only propagated when the target module reads the exporting module.

Reviewed-by: vromero, jjg